--- a/frontend/src/Styles/Style.module.css
+++ b/frontend/src/Styles/Style.module.css
@@ -45,7 +45,7 @@
     font-weight: 700;
     font-size: 20px;
     outline: none;
-    background: black;
+    background: #AF2BC1;
     color: white;
     border-radius: 10px;
     cursor: pointer;
@@ -93,25 +93,36 @@
     width: 100%;
     height: 80%;
     outline: none;
-    border: 3px solid black;
+    border: 1.5px solid #AF2BC1;
     border-radius: 4px;
     font-family: 'Space Mono';
+    font-size: 1.2em;
     font-weight: 800;
     padding: 0 10px;
     color: rgb(110, 101, 101);
+    &:hover{
+        border: 3px solid #AF2BC1;
+    }
 }
 
 button{
-    background: black;
+    background: #d998e1;
     border-radius: 12px;
     height: 8%;
     color: white;
     font-size: 1.4em;
-    font-family: 'roboto';
     width: 84%;
     margin-left: 14px;
     margin-top: 60px;
     margin-bottom: 20px;
+    font-family: var(--font-spline-sans);
+    font-weight: 700;
+    outline: none;
+    border: none;
+    &:hover{
+        background-color: #AF2BC1;
+        cursor: pointer;
+    }
 }
 
 .formErrors{
