--- a/frontend/src/Styles/mainpage.module.css
+++ b/frontend/src/Styles/mainpage.module.css
@@ -210,6 +210,31 @@
     background-color: white;
 }
 
+.noProjAvailMain{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-family: var(--font-spline-sans);
+    font-weight: 700;
+    font-size: 2em;
+    color: #AF2BC1;
+}
+.notAvail{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.noProjAvail{
+    font-family: var(--font-spline-sans);
+    font-size: 1em;
+    color: #AF2BC1;
+    margin-top: 1em;
+}
+
 .projectDetails{
     box-sizing: border-box;
     width: 100%;
