--- a/frontend/src/Styles/kanban.module.css
+++ b/frontend/src/Styles/kanban.module.css
@@ -101,6 +101,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 .displayer{
