--- a/frontend/src/Styles/mainpage.module.css
+++ b/frontend/src/Styles/mainpage.module.css
@@ -493,6 +493,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    position: relative;
 }
 
 .modalHeader{
